SynProdGITV1/force-app/main/default/objects/Bypass_Flows_User_related_Flow__mdt/Bypass_Flows_User_related_Flow__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to store the flow name to look up with Data Load User, which allows that user to bypass the flow</description>
    <label>Bypass Flows - User related Flow</label>
    <pluralLabel>Bypass Flows - User related Flows</pluralLabel>
</CustomObject>