SynProdGITV1/force-app/main/default/objects/Bypass_Flows_User_related_Flow__mdt/fields/Data_Load_User__c.field-meta.xml
<CustomField>
    <fullName>Data_Load_User__c</fullName>
    <description>Parent Data load User</description>
    <label>Data Load User</label>
    <referenceTo>Bypass_Flows_User__mdt</referenceTo>
    <relationshipName>Data_Load_Flows</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>