SynProdGITV1/force-app/main/default/objects/Bypass_Flows_User_related_Flow__mdt/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <description>Flow name</description>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>