SynProdGITV1/force-app/main/default/objects/Bypass_Flows_User_related_Flow__mdt/fields/Is_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Is_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bypass</label>
    <type>Checkbox</type>
</CustomField>